<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="mqtt_enable"
        android:title="@string/mqtt_enable" />
    <EditTextPreference
        android:capitalize="words"
        android:dependency="mqtt_enable"
        android:key="mqtt_server"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/mqtt_server" />
    <EditTextPreference
        android:defaultValue="1883"
        android:dependency="mqtt_enable"
        android:key="mqtt_port"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/mqtt_port" />
    <EditTextPreference
        android:dependency="mqtt_enable"
        android:key="mqtt_username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/mqtt_username" />
    <EditTextPreference
        android:dependency="mqtt_enable"
        android:key="mqtt_password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/mqtt_password"
        android:inputType="textPassword"/>
</PreferenceScreen>